Resolve "Fix spacing for checkbox group options array variant"

--- a/src/components/base/form/form_checkbox/form_checkbox.scss
+++ b/src/components/base/form/form_checkbox/form_checkbox.scss
@@ -4,6 +4,7 @@
   @include gl-align-self-start;
   @include gl-static;
   @include gl-h-auto;
+  @include gl-mr-0;
 }
 
 .gl-form-checkbox {
